Fix sidebar scrollbar jumping

--- a/assets/css/sensei-course-theme/layout.scss
+++ b/assets/css/sensei-course-theme/layout.scss
@@ -76,6 +76,7 @@ body.sensei-course-theme {
 		overscroll-behavior: contain;
 		display: flex;
 		flex-direction: column;
+		scrollbar-gutter: stable both-edges;
 
 		@media screen and (min-width: $breakpoint ) {
 			&--hidden {
